--- a/code-demos/standard-project-demo/pom.xml
+++ b/code-demos/standard-project-demo/pom.xml
@@ -3,21 +3,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>java-cook-book</artifactId>
+        <artifactId>code-demos</artifactId>
         <groupId>com.hzy</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>work-demos</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>standard-project-demo</artifactId>
 
-    <name>work-demos</name>
+    <name>standard-project-demo</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
-    <modules>
-        <module>interview-questions</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
