--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <module>tool-demos</module>
       <module>bigdata-demos</module>
     <module>work-demos</module>
+    <module>code-demos</module>
+    <module>spring-demos</module>
+      <module>life-demos</module>
   </modules>
 
   <name>java-cook-book</name>
