--- a/spring-demos/pom.xml
+++ b/spring-demos/pom.xml
@@ -9,20 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>work-demos</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>spring-demos</artifactId>
 
-    <name>work-demos</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
-    <modules>
-        <module>interview-questions</module>
-    </modules>
+    <name>spring-demos</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
