--- a/unittest-demos/pom.xml
+++ b/unittest-demos/pom.xml
@@ -10,8 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>unittest-demos</artifactId>
+    <packaging>pom</packaging>
 
     <name>unittest-demos</name>
+    <modules>
+        <module>junit-demos</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
