--- a/tool-demos/base-demos/pom.xml
+++ b/tool-demos/base-demos/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
     </dependencies>
 
 </project>
